change css files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">NAVBAR</nav>
     <aside class="sidebar">SIDEBAR</aside>
     <main class="main">MAIN</main>
-    <footer class="footer">FOOTER</footer>
+    <footer class="footer"> © 2024 NY Metropolitan Museum. Todos los derechos reservados</footer>
 </body>
 
 </html>
