--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body class="grid-container">
-    <header class="header">HEADER</header>
-    <nav class="navbar">NAVBAR</nav>
+    <header class="header">
+        <h1>The Metropolitan Museum of art</h1>
+    </header>
+    <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About us</a>
+    </nav>
     <aside class="sidebar">SIDEBAR</aside>
     <main class="main">MAIN</main>
     <footer class="footer"> © 2024 NY Metropolitan Museum. Todos los derechos reservados</footer>
